# open-o1

./: .env_example  .gitignore  README.md  app.py  input_config.json  pyproject.toml  requirements.txt  sometext.txt  ten.py  tt.py
.github/workflows/: sync_to_huggingface.yaml
app/: app.py  app_config.py  utils.py
core/: generation_utils.py  types.py  utils.py
core/config/: config.py
core/llms/: __init__.py  base_llm.py  litellm_llm.py  utils.py
core/prompts/: __init__.py  chat_mark_chat.py  cot.py  decision_prompt.py  general.py  think_mark_think.py
